--- a/Dataset_creation.ipynb
+++ b/Dataset_creation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNP5jdjlgy+mCjURM3r1n7W",
+      "authorship_tag": "ABX9TyM2AIDyRRGI65rFWOUym+OH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 13,
       "metadata": {
         "id": "RSFlxcSaVPmQ"
       },
@@ -37,7 +37,7 @@
         "import pandas as pd\n",
         "\n",
         "# Load the CSV file\n",
-        "df = pd.read_csv(\"/content/output (1).csv\")\n",
+        "df = pd.read_csv(\"/content/input.csv\")\n",
         "\n",
         "# Define the values you want to match in columns C and D\n",
         "value_D = \"value_D\"\n",
@@ -45,9 +45,36 @@
         "\n",
         "# Create condition (D == value_D) and (C == value_C)\n",
         "mask = (df.iloc[:, 3] == \"TimesTen-Roman\") & (df.iloc[:, 2] == 10)\n",
+        "mask2 =(df.iloc[:, 3] == \"TimesTenLTStd-Roman\") & (df.iloc[:, 2] == 8)\n",
+        "mask3 =(df.iloc[:, 3] == \"ITCAvantGardeStd-Bk\") & (df.iloc[:, 2] == 40)\n",
+        "mask4=(df.iloc[:, 3] == \"ITCAvantGardeStd-Bk\") & (df.iloc[:, 2] == 20)\n",
+        "mask5= (df.iloc[:, 3] == \"ITCAvantGardeStd-Bold\") & (df.iloc[:, 2] == 10)\n",
+        "mask6=(df.iloc[:, 3] == \"TimesTenLTStd-Roman\") & (df.iloc[:, 2] == 10)\n",
+        "mask7= (df.iloc[:, 3] == \"Univers-Light\") & (df.iloc[:, 2] == 9)\n",
+        "mask8= (df.iloc[:, 3] == \"AvantGarde-Demi\") & (df.iloc[:, 2] == 10)\n",
+        "mask9= (df.iloc[:, 3] == \"TimesTen-Bold\") & (df.iloc[:, 2] == 10)\n",
+        "mask10= (df.iloc[:, 3] == \"Helvetica\") & (df.iloc[:, 2] == 8)\n",
+        "mask11 = (df.iloc[:, 3] == \"TimesTen-Roman\") & (df.iloc[:, 2] == 9)\n",
+        "mask12= (df.iloc[:, 3] == \"TimesTen-Roman\") & (df.iloc[:, 2] == 10.5)\n",
+        "mask13= (df.iloc[:, 3] == \"Helvetica\")\n",
         "\n",
         "# Fill column K (index 10) with desired value, e.g., \"MATCHED\"\n",
         "df.iloc[mask, 10] = \"Other\"\n",
+        "df.iloc[mask2, 10] = \"Other\"\n",
+        "df.iloc[mask3, 10] = \"Title\"\n",
+        "df.iloc[mask4, 10] = \"H1\"\n",
+        "df.iloc[mask5, 10] = \"H3\"\n",
+        "df.iloc[mask6, 10] = \"Other\"\n",
+        "df.iloc[mask7, 10] = \"Other\"\n",
+        "df.iloc[mask8, 10] = \"H3\"\n",
+        "df.iloc[mask9, 10] = \"Title\"\n",
+        "df.iloc[mask10, 10] = \"Other\"\n",
+        "df.iloc[mask11, 10] = \"Other\"\n",
+        "df.iloc[mask12, 10] = \"H3\"\n",
+        "df.iloc[mask13, 10] = \"Other\"\n",
+        "\n",
+        "df.iloc[:, 10] = df.iloc[:, 10].replace('', pd.NA)  # convert empty strings to NA\n",
+        "df.iloc[:, 10] = df.iloc[:, 10].fillna('Other')     # fill NA with 'Other'\n",
         "# Save the updated CSV\n",
         "df.to_csv(\"output.csv\", index=False)\n"
       ]
@@ -70,15 +97,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yJIK-wdcbXt7",
-        "outputId": "db6e36cb-efa6-4687-b191-775b63e989f1"
+        "outputId": "c265df25-d53d-45c9-a9d3-c232bd2014d1"
       },
-      "execution_count": 5,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Number of empty cells in column K: 18703\n"
+            "Number of empty cells in column K: 0\n"
           ]
         }
       ]
